infra/k8s/api.yaml
# kubernetes-fastapi LoadBalancer Service
# Enables the pods in a deployment to be accessible from outside the cluster
apiVersion: v1
kind: Service
metadata:
  name: fastapi-srv
spec:
  selector:
    app: fastapi
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  type: LoadBalancer

---
# kubernetes-fastapi Deployment
# Defines the deployment of the app running in a pod on any worker node
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-dpl
  labels:
    app: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: xdot2012/fastapi
          ports:
            - containerPort: 80
